--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Testing!!!</h1>
+<!DOCTYPE html>
+<html lang="fi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The German start-up attempting to cheat death?</title>
+</head>
+<body>
+    <h1>Is this the $200,000 ticket to cheating death?</h1>
+</body>
+</html>
+<img src="images/ambulanssi.webp" width="820" height="" alt=""
