--- a/index.html
+++ b/index.html
@@ -7,6 +7,54 @@
 </head>
 <body>
     <h1>Is this the $200,000 ticket to cheating death?</h1>
+
+    <p>The ambulance parked up by a green in central Berlin is small, almost toy-like; a thick orange stripe across its sides, a tangle of wires looping from the ceiling.</p>  
+<p>It is one of three retrofitted and operated by Tomorrow.Bio, Europe's first cryonics lab, whose mission is to freeze patients after death, and one day bring them back to life, all for a cost of $200,000 (£165,000).</p>
+<p>At the perfusion pump is Emil Kendziorra, Tomorrow.Bio's co-founder and a former cancer researcher who switched careers after finding progress in curing the disease "way too slow". While the world's first cryonics lab opened in Michigan almost half a century ago.</p> 
+<p>No one has ever been successfully revived following cryopreservation, and, even if they were, the potential result could be coming back to life severely brain damaged. 
+That there is currently no proof that organisms with brain structures as complex as humans' can successfully be restored exposes the concept as "preposterous", says Clive Coen, professor of neuroscience at King's College London.
+He sees pronouncements that nanotechnology (carrying out elements of the process on a nano scale) or connectomics (mapping the brain's neurons) will bridge the current gap between theoretical biology and reality as overpromises, too.</p>
+<p>Such criticisms have not blunted Tomorrow.Bio's ambitions. Once a patient has signed up with the firm and a doctor confirms they are within the final days of their life, the company dispatches an ambulance to their location. When legally pronounced dead, the patient is moved to Tomorrow.</p>
+<p>Bio's ambulance, where the cryonics procedure begins. The start-up has been motivated by patients whose hearts have stopped in freezing temperatures and then later been restarted again.</p>
+<p>One example was Anna Bagenholm, who in 1999 spent two hours clinically dead during a ski holiday in Norway, but was later revived.</p>
+
+
+<p>
+<a href="https://www.bbc.com/future/article/20250115-cryonics-the-start-up-that-wants-to-freeze-you-in-suspended-animation">BBC Artikkeli</a>
+</p>
+
 </body>
 </html>
-<img src="images/ambulanssi.webp" width="820" height="" alt=""
+<img src="images/kuva.webp.webp
+
+:root {
+    --accent-color: orange;
+}
+
+
+body {
+    background-color: red;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+h1, h2 {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--accent-color);
+    font-size: 36px;
+    /* px em rem % vw vh */
+    line-height: 1.3;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+a, a:visited, a:active {
+    color:  var(--accent-color);
+}
+
+a:hover {
+    text-decoration: none;
+}
